# reeln-plugin-cloudflare

./: CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
reeln_cloudflare_plugin/: __init__.py  plugin.py  r2.py
tests/: conftest.py
tests/unit/: test_init.py  test_plugin.py  test_r2.py
