[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reeln-plugin-cloudflare"
dynamic = ["version"]
description = "reeln-cli plugin for Cloudflare R2 video uploads"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = ["boto3"]

[project.urls]
Homepage = "https://streamn.dad"
Repository = "https://github.com/StreamnDad/reeln-plugin-cloudflare"
Changelog = "https://github.com/StreamnDad/reeln-plugin-cloudflare/blob/main/CHANGELOG.md"
Issues = "https://github.com/StreamnDad/reeln-plugin-cloudflare/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "boto3-stubs[s3]",
]

[project.entry-points."reeln.plugins"]
cloudflare = "reeln_cloudflare_plugin:CloudflarePlugin"

[tool.hatch.build.targets.wheel]
packages = ["reeln_cloudflare_plugin"]

[tool.hatch.version]
path = "reeln_cloudflare_plugin/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "reeln.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true
